# foodie-hub

./: .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0ce2bfad58fc_add_explicit_fk_constraint_names.py  20260327_0001_initial_schema.py  20260330_0002_add_terms_and_conditions.py  20260330_0003_add_text_based_orders.py  42c36ae3bf86_add_active_orders_count.py  4b74212dd106_add_ondelete_constraints_to_order_.py
app/: main.py
app/api/: __init__.py  dependencies.py  router.py
app/api/routes/: welcome.py
app/api/routes/admin/: feedbacks.py  orders.py  reports.py  router.py  terms_and_conditions.py  user.py
app/api/routes/auth/: auth.py  router.py
app/api/routes/consumer/: hotels.py  orders.py  router.py  user.py
app/api/routes/delivery/: orders.py  router.py
app/api/routes/hotel/: hotel.py  menu.py  orders.py  router.py
app/api/routes/notifications/: router.py  sse.py
app/api/routes/support/: feedback.py  report.py  router.py
app/core/: config.py  exception_handlers.py  exceptions.py  logger.py  security.py  session.py  utils.py
app/core/middleware/: logging_middleware.py  rate_limiter.py
app/models/: __init__.py  base.py  enums.py  hotel.py  order.py  support.py  terms.py  user.py
app/repositories/: hotel_repository.py  order_repository.py  support_repository.py  terms_and_conditions_repository.py  user_repository.py
app/schemas/admin/: feedbacks.py  orders.py  reports.py  terms.py  user.py
app/schemas/auth/: auth.py
app/schemas/consumer/: hotel.py  orders.py  user.py
app/schemas/delivery/: orders.py
app/schemas/error/: error.py
app/schemas/hotel/: hotel.py  menu.py
app/schemas/notifications/: __init__.py  sse.py
app/schemas/support/: support.py
app/services/: base.py  cache.py
app/services/auth/: service.py
app/services/hotels/: service.py
app/services/menu/: service.py
app/services/notifications/: __init__.py  service.py
app/services/orders/: service.py
app/services/support/: feedback_service.py  report_service.py
app/services/terms/: service.py
app/services/users/: service.py
docs/: LOAD_TESTING_K6.md  SSE_NOTIFICATIONS.md
scripts/: docker.sh
tests/: conftest.py  utils.py
tests/api/: test_dependencies.py
tests/api/routes/admin/: test_admin_feedbacks.py  test_admin_orders.py  test_admin_reports.py  test_admin_terms.py  test_admin_user.py
tests/api/routes/auth/: test_auth.py
tests/api/routes/consumer/: test_hotels.py  test_orders.py  test_user.py
tests/api/routes/delivery/: test_delivery_orders.py
tests/api/routes/hotel/: test_hotel.py  test_hotel_orders.py  test_menu.py
tests/api/routes/notifications/: test_sse.py
tests/api/routes/support/: test_feedback.py  test_report.py
tests/core/: test_exception_handlers.py  test_logger.py  test_rate_limiter.py  test_security.py  test_session.py  test_utils.py
tests/load/: k6_foodie_hub_benchmark.js
tests/repository/: test_hotel_repository.py  test_order_repository.py  test_support_repository.py  test_terms_and_conditions_repository.py  test_user_repository.py
tests/services/: test_auth_service.py  test_cache_service.py  test_feedback_service.py  test_hotel_service.py  test_menu_service.py  test_notification_service.py  test_order_service.py  test_orderbid_service.py  test_report_service.py  test_terms_service.py  test_user_service.py
